# miner

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker.yml
assets/: dashboard.html  login.html
src/: auth.rs  config.rs  main.rs  miner.rs  stats.rs
