[package]
name = "miner"
version = "0.1.0"
edition = "2021"
description = "Docker-first BTC solo (lottery) miner with a real-data dashboard"
license = "MIT"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.10.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
strip = true
lto = true
